--- a/MyWeatherApp/Podfile
+++ b/MyWeatherApp/Podfile
@@ -1,10 +1,11 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '8.0'
+source 'https://github.com/CocoaPods/Specs.git'
+#platform :iOS, '10.0'
 # Uncomment this line if you're using Swift
  use_frameworks!
 
 target 'MyWeatherApp' do
-pod 'Alamofire', '~> 3.4'
-pod 'SwiftyJSON'
+ pod 'Alamofire', '~> 4.0'
+pod 'SwiftyJSON', git: 'https://github.com/BaiduHiDeviOS/SwiftyJSON.git', branch: 'swift3'
 end
 
